--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgres://rrzkfmbq:31BB1HhHSFY-30zSGGGUkgNwIrwIWt6l@balarama.db.elephantsql.com/rrzkfmbq"
+DATABASE_URL=""
